--- a/svc/cloudflared/docker-compose.yml
+++ b/svc/cloudflared/docker-compose.yml
@@ -1,5 +1,3 @@
-# kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
-
 # SETUP:
 #
 # Create a .env file with:
@@ -7,7 +5,8 @@
 # - TUNNEL_TOKEN
 
 networks:
-  default: {}
+  traefik_default:
+    external: true
 
 services:
   cloudflared:
@@ -21,7 +20,7 @@ services:
       NO_AUTOUPDATE: true
     image: docker.io/cloudflare/cloudflared:2024.11.1@sha256:665dda65335e35a782ed9319aa63e8404f88b34d2644d30adf3e91253604ffa0
     networks:
-      - default
+      - traefik_default
     read_only: true
     restart: always
     security_opt:
