--- a/svc/immich/docker-compose.yml
+++ b/svc/immich/docker-compose.yml
@@ -1,5 +1,3 @@
-# kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
-
 # Create a .env file with:
 #
 # POSTGRES_DB=
@@ -7,37 +5,14 @@
 # POSTGRES_USER=
 
 networks:
-  caddy_default:
+  traefik_default:
     external: true
-  default: {}
 
 services:
-  # kics-scan ignore-block
-  chown-volumes:
-    entrypoint:
-      - sh
-      - -c
-      - chown -R 5551:5551 /volumes/data && chown -R 8723:8723 /volumes/machine-learning-cache && chown -R 70:70 /volumes/postgres
-    image: docker.io/library/busybox:1.37.0-musl@sha256:e95352f7c5174c96ffc684150c9d08fc3ba26ac2f37c613c398fd369e15a0789
-    read_only: true
-    restart: "no"
-    security_opt:
-      - no-new-privileges:true
-    user: 0:0
-    volumes:
-      - data:/volumes/data
-      - machine-learning-cache:/volumes/machine-learning-cache
-      - postgres:/volumes/postgres
-
   immich-machine-learning:
     cap_drop:
       - ALL
-    depends_on:
-      chown-volumes:
-        condition: service_completed_successfully
     image: ghcr.io/immich-app/immich-machine-learning:v1.121.0@sha256:1b8494bb9fe2194f2dc72c4d6b0104e16718f50e8772d54ade57909770816ad1
-    networks:
-      - default
     read_only: true
     restart: always
     security_opt:
@@ -53,8 +28,6 @@ services:
     cap_drop:
       - ALL
     depends_on:
-      chown-volumes:
-        condition: service_completed_successfully
       postgres:
         condition: service_healthy
       redis:
@@ -67,11 +40,13 @@ services:
       - DB_PASSWORD=${POSTGRES_PASSWORD}
       - DB_USERNAME=${POSTGRES_USER}
     image: ghcr.io/immich-app/immich-server:v1.121.0@sha256:851c02f28891f1854c5b5762ee8d2e254e2de528cfe3627b2fbcb37a7f108ff3
+    labels:
+      traefik.enable: true
+      traefik.http.routers.immich.rule: Host(`photos.zarantonello.net`)
+      traefik.http.services.immich.loadbalancer.server.port: 2283
     networks:
-      caddy_default:
-        aliases:
-          - immich
-      default: {}
+      - default
+      - traefik_default
     restart: always
     security_opt:
       - no-new-privileges:true
@@ -82,9 +57,6 @@ services:
   postgres:
     cap_drop:
       - ALL
-    depends_on:
-      chown-volumes:
-        condition: service_completed_successfully
     env_file: .env
     environment:
       PGUSER: ${POSTGRES_USER}
@@ -96,8 +68,6 @@ services:
         - pg_isready
       timeout: 5s
     image: docker.io/tensorchord/pgvecto-rs:pg16-v0.3.0-rootless@sha256:d125f3aec02bfa66764432eae76e1098a3b0c6f8bf13db38f5af1156499c90b5
-    networks:
-      - default
     read_only: true
     restart: always
     security_opt:
@@ -123,17 +93,16 @@ services:
         - ping
       timeout: 5s
     image: docker.io/library/redis:7.4.1-alpine@sha256:c1e88455c85225310bbea54816e9c3f4b5295815e6dbf80c34d40afc6df28275
-    networks:
-      - default
     read_only: true
     restart: always
     security_opt:
       - no-new-privileges:true
-    tmpfs:
-      - /data:uid=9243,gid=9243
     user: 9243:9243
+    volumes:
+      - redis:/data
 
 volumes:
   data: {}
   machine-learning-cache: {}
   postgres: {}
+  redis: {}
