--- a/svc/nextcloud/docker-compose.yml
+++ b/svc/nextcloud/docker-compose.yml
@@ -1,5 +1,3 @@
-# kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
-
 # SETUP:
 #
 # Create a .env file with:
@@ -18,13 +16,11 @@ configs:
     file: Caddyfile
 
 networks:
-  cloudflared_default:
+  traefik_default:
     external: true
-  default: {}
 
 services:
   caddy:
-    # kics-scan ignore-block
     cap_add:
       - NET_BIND_SERVICE
     cap_drop:
@@ -33,11 +29,13 @@ services:
       - source: caddyfile
         target: /etc/caddy/Caddyfile
     image: docker.io/library/caddy:2.8.4-alpine@sha256:e97e0e3f8f51be708a9d5fadbbd75e3398c22fc0eecd4b26d48561e3f7daa9eb
+    labels:
+      traefik.enable: true
+      traefik.http.routers.nextcloud.rule: Host(`cloud.zarantonello.dev`)
+      traefik.http.services.nextcloud.loadbalancer.server.port: 3000
     networks:
-      cloudflared_default:
-        aliases:
-          - nextcloud_caddy
-      default: {}
+      - default
+      - traefik_default
     read_only: true
     restart: always
     security_opt:
@@ -49,29 +47,10 @@ services:
     volumes:
       - nextcloud:/var/www/html:ro
 
-  # kics-scan ignore-block
-  chown-volumes:
-    entrypoint:
-      - sh
-      - -c
-      - chown -R 82:82 /volumes/data && chown -R 24056:24056 /volumes/redis && chown -R 70:70 /volumes/postgres
-    image: docker.io/library/busybox:1.37.0-musl@sha256:e95352f7c5174c96ffc684150c9d08fc3ba26ac2f37c613c398fd369e15a0789
-    read_only: true
-    restart: "no"
-    security_opt:
-      - no-new-privileges:true
-    user: 0:0
-    volumes:
-      - data:/volumes/data
-      - redis:/volumes/redis
-      - postgres:/volumes/postgres
-
   nextcloud:
     cap_drop:
       - ALL
     depends_on:
-      chown-volumes:
-        condition: service_completed_successfully
       postgres:
         condition: service_healthy
       redis:
@@ -85,8 +64,6 @@ services:
       POSTGRES_HOST: postgres
       REDIS_HOST: redis
     image: docker.io/library/nextcloud:30.0.2-fpm-alpine@sha256:95bb7df72a20af7510a5f9f7155a1ea845acdbfbe97fb20437ba3cabf5ef7884
-    networks:
-      - default
     restart: always
     security_opt:
       - no-new-privileges:true
@@ -97,7 +74,6 @@ services:
       - data:/var/www/html/data
       - nextcloud:/var/www/html
 
-  # kics-scan ignore-block
   nextcloud_cron:
     depends_on:
       nextcloud:
@@ -112,7 +88,6 @@ services:
   # The first time nextcloud runs, it's normal that this service fails. Ensure
   # to install the notify push app inside nextcloud to make this work.
 
-  # kics-scan ignore-block
   nextcloud_notify_push:
     depends_on:
       nextcloud:
@@ -126,9 +101,6 @@ services:
   postgres:
     cap_drop:
       - ALL
-    depends_on:
-      chown-volumes:
-        condition: service_completed_successfully
     env_file: .env
     environment:
       PGUSER: ${POSTGRES_USER}
@@ -140,8 +112,6 @@ services:
         - pg_isready
       timeout: 5s
     image: docker.io/library/postgres:17.2-alpine@sha256:e7897baa70dae1968d23d785adb4aeb699175e0bcaae44f98a7083ecb9668b93
-    networks:
-      - default
     read_only: true
     restart: always
     security_opt:
@@ -158,9 +128,6 @@ services:
   redis:
     cap_drop:
       - ALL
-    depends_on:
-      chown-volumes:
-        condition: service_completed_successfully
     healthcheck:
       interval: 10s
       retries: 5
@@ -170,8 +137,6 @@ services:
         - ping
       timeout: 5s
     image: docker.io/library/redis:7.4.1-alpine@sha256:c1e88455c85225310bbea54816e9c3f4b5295815e6dbf80c34d40afc6df28275
-    networks:
-      - default
     read_only: true
     restart: always
     security_opt:
