chore: fix lints

--- a/svc/authelia/configuration.yml
+++ b/svc/authelia/configuration.yml
@@ -1,58 +1,46 @@
-theme: auto
-log:
-  level: info
-  format: json
-telemetry:
-  metrics:
-    enabled: true
-totp:
-  issuer: auth.zarantonello.dev
-webauthn:
-  disable: true
-authentication_backend:
-  password_reset:
-    disable: true
-  file:
-    path: /config/users.yml
-password_policy:
-  zxcvbn:
-    enabled: true
-    min_score: 4
 access_control:
   rules:
     - domain:
         - "*.zarantonello.dev"
         - "*.zarantonello.net"
       policy: two_factor
+authentication_backend:
+  file:
+    path: /config/users.yml
+  password_reset:
+    disable: true
+log:
+  format: json
+  level: info
+password_policy:
+  zxcvbn:
+    enabled: true
+    min_score: 4
 session:
-  secret: '{{ mustEnv "SESSION_SECRET" | trim }}'
   cookies:
-    - domain: zarantonello.dev
-      authelia_url: https://auth.zarantonello.dev
-    - domain: zarantonello.net
-      authelia_url: https://auth.zarantonello.net
+    - authelia_url: https://auth.zarantonello.dev
+      domain: zarantonello.dev
+    - authelia_url: https://auth.zarantonello.net
+      domain: zarantonello.net
   redis:
     host: redis
     port: 6379
+  secret: '{{ mustEnv "SESSION_SECRET" | trim }}'
 storage:
   encryption_key: '{{ mustEnv "STORAGE_ENCRYPTION_KEY" }}'
   postgres:
     address: tcp://postgres:5432
     database: '{{ mustEnv "POSTGRES_DB" | trim }}'
-    username: '{{ mustEnv "POSTGRES_USER" | trim }}'
     password: '{{ mustEnv "POSTGRES_PASSWORD" | trim }}'
+    username: '{{ mustEnv "POSTGRES_USER" | trim }}'
 notifier:
   smtp:
     address: submissions://smtp.purelymail.com:465
-    username: '{{ mustEnv "SMTP_USER" | trim }}'
     password: '{{ mustEnv "SMTP_PASSWORD" | trim }}'
     sender: Authelia <auth@zarantonello.dev>
+    username: '{{ mustEnv "SMTP_USER" | trim }}'
 identity_providers:
   oidc:
-    hmac_secret: '{{ mustEnv "OIDC_HMAC_SECRET" | trim }}'
-    jwks:
-      - key: |
-          {{ mustEnv "OIDC_JWKS_PRIVATE_KEY_BASE64" | trim | b64dec | indent 10 | trim }}
     clients:
       - client_id: '{{ mustEnv "IMMICH_CLIENT_ID" | trim }}'
         client_name: Immich
@@ -76,3 +64,15 @@ identity_providers:
           - profile
         userinfo_signed_response_alg: none
         token_endpoint_auth_method: client_secret_post
+    hmac_secret: '{{ mustEnv "OIDC_HMAC_SECRET" | trim }}'
+    jwks:
+      - key: |
+          {{ mustEnv "OIDC_JWKS_PRIVATE_KEY_BASE64" | trim | b64dec | indent 10 | trim }}
+telemetry:
+  metrics:
+    enabled: true
+theme: auto
+totp:
+  issuer: auth.zarantonello.dev
+webauthn:
+  disable: true
