--- a/svc/minio/docker-compose.yml
+++ b/svc/minio/docker-compose.yml
@@ -2,8 +2,10 @@
 #
 # Create a .env file with
 #
-# - MINIO_ROOT_USER
+# - MINIO_IDENTITY_OPENID_CLIENT_ID
+# - MINIO_IDENTITY_OPENID_CLIENT_SECRET
 # - MINIO_ROOT_PASSWORD
+# - MINIO_ROOT_USER
 #
 # TIP: In the host's /etc/fstab file mount the 4 data disks with the nofail
 # option to make the system boot even if one the data drives fails.
@@ -20,15 +22,18 @@ services:
       - server
     env_file: .env
     environment:
-      - MINIO_VOLUMES=/mnt/disk1 /mnt/disk2 /mnt/disk3 /mnt/disk4
-      - MINIO_STORAGE_CLASS_STANDARD=EC:1
-      - MINIO_CONSOLE_ADDRESS=:9001
-      - MINIO_BROWSER_REDIRECT_URL=https://minio.zarantonello.dev/minio/
+      MINIO_BROWSER_REDIRECT_URL: https://minio.zarantonello.dev/minio/
+      MINIO_CONSOLE_ADDRESS: :9001
+      MINIO_IDENTITY_OPENID_CONFIG_URL: https://auth.zarantonello.dev/.well-known/openid-configuration
+      MINIO_STORAGE_CLASS_STANDARD: EC:1
+      MINIO_VOLUMES: /mnt/disk1 /mnt/disk2 /mnt/disk3 /mnt/disk4
     image: quay.io/minio/minio:RELEASE.2024-11-07T00-52-20Z-cpuv1@sha256:8d01c1f03e13a216995d9a064f7310a28a978a3d34dd0ed4799247842fcbdc8c
     labels:
       traefik.enable: true
+      traefik.http.middlewares.minio-dashboard.stripprefix.prefixes: /minio
       traefik.http.routers.minio-dashboard.rule: Host(`minio.zarantonello.dev`) && PathPrefix('/minio')
       traefik.http.routers.minio-dashboard.service: minio-dashboard
+      traefik.http.routers.minio-dashborad.middlewares: minio-dashboard@docker
       traefik.http.routers.minio.rule: Host(`minio.zarantonello.dev`)
       traefik.http.routers.minio.service: minio
       traefik.http.services.minio-dashboard.loadbalancer.server.port: 9001
