--- a/svc/grafana/provisioning/datasources/victoriametrics.yml
+++ b/svc/grafana/provisioning/datasources/victoriametrics.yml
@@ -1,7 +1,7 @@
 apiVersion: 1
 
 datasources:
-  - name: VictoriaMetrics
+  - isDefault: true
+    name: VictoriaMetrics
     type: prometheus
     url: https://metrics.zarantonello.net
-    isDefault: true
