--- a/svc/minio/docker-compose.yml
+++ b/svc/minio/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       MINIO_BROWSER_REDIRECT_URL: https://minio.zarantonello.dev/minio/
       MINIO_CONSOLE_ADDRESS: :9001
       MINIO_IDENTITY_OPENID_CONFIG_URL: https://auth.zarantonello.dev/.well-known/openid-configuration
+      MINIO_IDENTITY_OPENID_DISPLAY_NAME: Authelia
       MINIO_STORAGE_CLASS_STANDARD: EC:1
       MINIO_VOLUMES: /mnt/disk1 /mnt/disk2 /mnt/disk3 /mnt/disk4
     image: quay.io/minio/minio:RELEASE.2024-11-07T00-52-20Z-cpuv1@sha256:8d01c1f03e13a216995d9a064f7310a28a978a3d34dd0ed4799247842fcbdc8c
