--- a/svc/minio/docker-compose.yml
+++ b/svc/minio/docker-compose.yml
@@ -22,25 +22,24 @@ services:
       - server
     env_file: .env
     environment:
-      MINIO_BROWSER_REDIRECT_URL: https://minio.zarantonello.dev/minio/
+      MINIO_BROWSER_REDIRECT_URL: https://minio.zarantonello.dev
       MINIO_CONSOLE_ADDRESS: :9001
+      MINIO_IDENTITY_OPENID_CLAIM_NAME: groups
       MINIO_IDENTITY_OPENID_CONFIG_URL: https://auth.zarantonello.dev/.well-known/openid-configuration
       MINIO_IDENTITY_OPENID_DISPLAY_NAME: Authelia
+      MINIO_IDENTITY_OPENID_SCOPES: email,profile,groups,openid
       MINIO_STORAGE_CLASS_STANDARD: EC:1
       MINIO_VOLUMES: /mnt/disk1 /mnt/disk2 /mnt/disk3 /mnt/disk4
     image: quay.io/minio/minio:RELEASE.2024-11-07T00-52-20Z-cpuv1@sha256:8d01c1f03e13a216995d9a064f7310a28a978a3d34dd0ed4799247842fcbdc8c
     labels:
       traefik.enable: true
-      traefik.http.middlewares.minio-dashboard.stripprefix.prefixes: /minio
-      traefik.http.routers.minio-dashboard.rule: Host(`minio.zarantonello.dev`) && PathPrefix('/minio')
+      traefik.http.routers.minio-dashboard.rule: Host(`minio.zarantonello.dev`)
       traefik.http.routers.minio-dashboard.service: minio-dashboard
-      traefik.http.routers.minio-dashborad.middlewares: minio-dashboard@docker
-      traefik.http.routers.minio.rule: Host(`minio.zarantonello.dev`)
-      traefik.http.routers.minio.service: minio
       traefik.http.services.minio-dashboard.loadbalancer.server.port: 9001
-      traefik.http.services.minio.loadbalancer.server.port: 9000
     networks:
       - traefik_default
+    ports:
+      - 100.81.212.20:9000:9000
     read_only: true
     restart: always
     security_opt:
