--- a/svc/authelia/docker-compose.yml
+++ b/svc/authelia/docker-compose.yml
@@ -4,8 +4,12 @@
 #
 # Create a .env file with:
 #
+# - GRAFANA_CLIENT_ID
+# - GRAFANA_CLIENT_SECRET
 # - IMMICH_CLIENT_ID
 # - IMMICH_CLIENT_SECRET
+# - MINIO_CLIENT_ID
+# - MINIO_CLIENT_SECRET
 # - OIDC_HMAC_SECRET
 # - OIDC_JWKS_PRIVATE_KEY_BASE64
 # - OUTLINE_CLIENT_ID
