--- a/svc/grafana/grafana.ini
+++ b/svc/grafana/grafana.ini
@@ -20,12 +20,20 @@ default_theme = system
 
 [auth]
 disable_login_form = true
-disable_signout_menu = true
 
-[auth.proxy]
+[auth.generic_oauth]
+skip_org_role_sync = true
+api_url = https://auth.zarantonello.net/api/oidc/userinfo
+auth_url = https://auth.zarantonello.net/api/oidc/authorization
+client_id = $__env{OAUTH_CLIENT_ID}
+client_secret = $__env{OAUTH_CLIENT_SECRET}
 enabled = true
-header_name = Remote-User
-headers = Name:Remote-Name Email:Remote-Email
+login_attribute_path = preferred_username
+name_attribute_path = name
+name = Authelia
+scopes = openid profile email
+token_url = https://auth.zarantonello.net/api/oidc/token
+use_pkce = true
 
 [smtp]
 enabled = true
