--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,10 +4,7 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": [
-        "esbenp.prettier-vscode",
-        "redhat.vscode-yaml"
-      ]
+      "extensions": ["esbenp.prettier-vscode", "redhat.vscode-yaml"]
     }
   }
 }
