--- a/svc/traefik/traefik.yml
+++ b/svc/traefik/traefik.yml
@@ -5,6 +5,8 @@ certificatesResolvers:
         provider: cloudflare
       storage: /var/lib/traefik/certificates/acme.json
 entryPoints:
+  http:
+    address: :8080
   https:
     address: :8443
     asDefault: true
@@ -20,6 +22,8 @@ entryPoints:
               - "*.zarantonello.net"
     http3:
       advertisedPort: 443
+  traefik:
+    address: :8000
 global:
   checkNewVersion: false
   sendAnonymousUsage: true
