--- a/svc/blocky/config.yml
+++ b/svc/blocky/config.yml
@@ -31,10 +31,10 @@ customDNS:
     grafana.zarantonello.net: 100.106.32.89
     hp2420.srv.zarantonello.dev: 100.81.212.20
     igl.zarantonello.dev: 100.106.32.89
-    metrics.zarantonello.net: 100.106.32.89
     minio.zarantonello.dev: 100.81.212.20
     photos.zarantonello.net: 100.106.32.89
     vault.zarantonello.net: 100.106.32.89
+    victoriametrics.zarantonello.net: 100.106.32.89
     x555sj.srv.zarantonello.dev: 100.106.32.89
 fqdnOnly:
   enable: true
