--- a/svc/grafana/provisioning/datasources/victoriametrics.yml
+++ b/svc/grafana/provisioning/datasources/victoriametrics.yml
@@ -4,4 +4,4 @@ datasources:
   - isDefault: true
     name: VictoriaMetrics
     type: prometheus
-    url: https://metrics.zarantonello.net
+    url: http://victoriametrics.zarantonello.net
