feat(immich): enable metrics

--- a/svc/grafana/docker-compose.yml
+++ b/svc/grafana/docker-compose.yml
@@ -54,6 +54,7 @@ services:
       - ALL
     env_file: .env
     environment:
+      # Configures the user used for healthchecking.
       PGUSER: ${POSTGRES_USER}
     healthcheck:
       interval: 10s
