--- a/svc/immich/docker-compose.yml
+++ b/svc/immich/docker-compose.yml
@@ -7,6 +7,8 @@
 networks:
   traefik_default:
     external: true
+  vmagent_default:
+    external: true
 
 services:
   immich-machine-learning:
@@ -34,11 +36,12 @@ services:
         condition: service_healthy
     env_file: .env
     environment:
-      - DB_HOSTNAME=postgres
-      - REDIS_HOSTNAME=redis
-      - DB_DATABASE_NAME=${POSTGRES_DB}
-      - DB_PASSWORD=${POSTGRES_PASSWORD}
-      - DB_USERNAME=${POSTGRES_USER}
+      DB_DATABASE_NAME: ${POSTGRES_DB}
+      DB_HOSTNAME: postgres
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_USERNAME: ${POSTGRES_USER}
+      IMMICH_TELEMETRY_INCLUDE: all
+      REDIS_HOSTNAME: redis
     image: ghcr.io/immich-app/immich-server:v1.124.2@sha256:c14dccad0611635668abf98f17ce87c3badcc17bb979c53ef96dc49e934ebbc8
     labels:
       traefik.enable: true
@@ -47,9 +50,12 @@ services:
       traefik.http.routers.immich.entrypoints: https,http
       traefik.http.routers.immich.rule: Host(`photos.zarantonello.net`)
       traefik.http.services.immich.loadbalancer.server.port: 2283
+      victoriametrics.job: immich
+      victoriametrics.port: 8081
     networks:
       - default
       - traefik_default
+      - vmagent_default
     restart: always
     security_opt:
       - no-new-privileges:true
@@ -62,6 +68,7 @@ services:
       - ALL
     env_file: .env
     environment:
+      # Configures the user used for healthchecking.
       PGUSER: ${POSTGRES_USER}
     healthcheck:
       interval: 10s
