--- a/svc/authelia/docker-compose.yml
+++ b/svc/authelia/docker-compose.yml
@@ -88,6 +88,7 @@ services:
       - ALL
     env_file: .env
     environment:
+      # Configures the user used for healthchecking.
       PGUSER: ${POSTGRES_USER}
     healthcheck:
       interval: 10s
