--- a/svc/authelia/docker-compose.yml
+++ b/svc/authelia/docker-compose.yml
@@ -61,11 +61,8 @@ services:
     image: docker.io/authelia/authelia:4.38.18@sha256:a5e6fa4b1dbdc296f80f9175157b145a0598690ec8cd4d6e105cd4498fe0c731
     labels:
       traefik.enable: true
-      traefik.http.middlewares.authelia.forwardAuth.address: http://authelia:9091/api/authz/forward-auth
-      traefik.http.middlewares.authelia.forwardAuth.authResponseHeaders: Remote-User,Remote-Groups,Remote-Email,Remote-Name
-      traefik.http.middlewares.authelia.forwardAuth.trustForwardHeader: true
-      # TLS is terminated by cloudflared.
       traefik.http.routers.authelia.entrypoints: http
+      traefik.http.routers.authelia.middlewares: cloudflaredHeaders@file
       traefik.http.routers.authelia.rule: Host(`auth.zarantonello.dev`) || Host(`auth.zarantonello.net`)
       traefik.http.services.authelia.loadbalancer.server.port: 9091
       victoriametrics.job: authelia
