--- a/svc/outline/docker-compose.yml
+++ b/svc/outline/docker-compose.yml
@@ -29,8 +29,6 @@ services:
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DATABASE}
       FILE_STORAGE: local
-      # Creates a redirect loop with cloudflared and traefik and it's not necessary.
-      FORCE_HTTPS: false
       OIDC_AUTH_URI: https://auth.zarantonello.dev/api/oidc/authorization
       OIDC_DISABLE_REDIRECT: true
       OIDC_DISPLAY_NAME: Authelia
@@ -47,8 +45,8 @@ services:
     image: docker.io/outlinewiki/outline:0.81.1@sha256:e539971b59b2523ab54bf792105d1cff6432974a37e18211c175cd053d7feb62
     labels:
       traefik.enable: true
-      # TLS is terminated by cloudflared.
       traefik.http.routers.outline.entrypoints: http
+      traefik.http.routers.outline.middlewares: cloudflaredHeaders@file
       traefik.http.routers.outline.rule: Host(`docs.zarantonello.dev`)
       traefik.http.services.outline.loadbalancer.server.port: 3000
     networks:
@@ -63,7 +61,7 @@ services:
     volumes:
       - data:/var/lib/outline/data
 
-  # Recurrent job that runs once a day.
+  # Recurrent job that runs twice a day.
   outline-cron:
     cap_drop:
       - ALL
