feat: feat add nextcloud, remove filebrowser (#279)

--- a/svc/traefik/traefik.yml
+++ b/svc/traefik/traefik.yml
@@ -40,3 +40,6 @@ providers:
   docker:
     exposedByDefault: false
     network: traefik_default
+  file:
+    filename: /etc/traefik/middlewares.yml
+    watch: false
