--- a/svc/nextcloud/docker-compose.yml
+++ b/svc/nextcloud/docker-compose.yml
@@ -2,13 +2,13 @@
 #
 # Create a .env file with:
 #
+# - NEXTCLOUD_ADMIN_USER
+# - NEXTCLOUD_ADMIN_PASSWORD
 # - POSTGRES_DB
 # - POSTGRES_PASSWORD
 # - POSTGRES_USER
-# - NEXTCLOUD_ADMIN_USER
-# - NEXTCLOUD_ADMIN_PASSWORD
 #
-# Additional configuration can be edited by running
+# Additional configuration can be applied by running
 # `docker compose exec -it nextcloud vi /var/www/html/config/config.php`.
 
 configs:
@@ -31,6 +31,7 @@ services:
     image: docker.io/library/caddy:2.9.1-alpine@sha256:7773b17cbe3a5a6c08131d23424b159df435ad7f457ba9f95b627eb245f46403
     labels:
       traefik.enable: true
+      traefik.http.routers.nextcloud.entrypoints: http,https
       traefik.http.routers.nextcloud.rule: Host(`cloud.zarantonello.dev`)
       traefik.http.services.nextcloud.loadbalancer.server.port: 3000
     networks:
@@ -71,24 +72,26 @@ services:
       - /tmp:uid=82,gid=82
     user: 82:82
     volumes:
+      - config:/var/www/html/config
       - data:/var/www/html/data
       - nextcloud:/var/www/html
 
-  nextcloud_cron:
+  # Recurrent job that runs every 5 minutes.
+  nextcloud-cron:
     depends_on:
       nextcloud:
         condition: service_started
     entrypoint:
       - sh
       - -c
-      - while true ; do php -f /var/www/html/cron.php && sleep 300 ; done
+      - while true ; do php -f /var/www/html/cron.php ; sleep 300 ; done
     extends:
       service: nextcloud
+    user: 33:33
 
   # The first time nextcloud runs, it's normal that this service fails. Ensure
   # to install the notify push app inside nextcloud to make this work.
-
-  nextcloud_notify_push:
+  nextcloud-notify-push:
     depends_on:
       nextcloud:
         condition: service_started
@@ -97,6 +100,16 @@ services:
       - /var/www/html/config/config.php
     extends:
       service: nextcloud
+    labels:
+      traefik.enable: true
+      traefik.http.middlewares.nextcloudNotifyPushStripPrefix.stripPrefix.prefixes: /push
+      traefik.http.routers.nextcloud-notify-push.entrypoints: http,https
+      traefik.http.routers.nextcloud-notify-push.middlewares: nextcloudNotifyPushStripPrefix@docker
+      traefik.http.routers.nextcloud-notify-push.rule: Host(`cloud.zarantonello.dev`) && PathPrefix(`/push`)
+      traefik.http.services.nextcloud-notify-push.loadbalancer.server.port: 7867
+    networks:
+      - default
+      - traefik_default
 
   postgres:
     cap_drop:
@@ -146,6 +159,7 @@ services:
       - redis:/data
 
 volumes:
+  config: {}
   data: {}
   nextcloud: {}
   postgres: {}
