--- a/svc/blocky/config.yml
+++ b/svc/blocky/config.yml
@@ -32,6 +32,7 @@ customDNS:
     igl.zarantonello.dev: 100.106.32.89
     minio.zarantonello.dev: 100.81.212.20
     photos.zarantonello.net: 100.106.32.89
+    s3.zarantonello.dev: 100.81.212.20
     vault.zarantonello.net: 100.106.32.89
     victoriametrics.zarantonello.net: 100.106.32.89
     x555sj.srv.zarantonello.dev: 100.106.32.89
