--- a/svc/minio/docker-compose.yml
+++ b/svc/minio/docker-compose.yml
@@ -36,11 +36,13 @@ services:
       traefik.http.routers.minio-dashboard.entrypoints: https
       traefik.http.routers.minio-dashboard.rule: Host(`minio.zarantonello.dev`)
       traefik.http.routers.minio-dashboard.service: minio-dashboard
+      traefik.http.routers.minio.entrypoints: http
+      traefik.http.routers.minio.rule: Host(`s3.zarantonello.dev`)
+      traefik.http.routers.minio.service: minio
       traefik.http.services.minio-dashboard.loadbalancer.server.port: 9001
+      traefik.http.services.minio.loadbalancer.server.port: 9000
     networks:
       - traefik_default
-    ports:
-      - 9000:9000
     read_only: true
     restart: always
     security_opt:
