--- a/svc/blocky/docker-compose.yml
+++ b/svc/blocky/docker-compose.yml
@@ -19,11 +19,7 @@ services:
     labels:
       victoriametrics.job: blocky
       victoriametrics.port: 8080
-    networks:
-      - vmagent_default
-    ports:
-      - 53:1053/tcp
-      - 53:1053/udp
+    network_mode: host
     read_only: true
     restart: always
     security_opt:
