fix(minio): skip traefik proxy for s3 api and update version

--- a/svc/minio/docker-compose.yml
+++ b/svc/minio/docker-compose.yml
@@ -30,19 +30,17 @@ services:
       MINIO_IDENTITY_OPENID_SCOPES: email,profile,groups,openid
       MINIO_STORAGE_CLASS_STANDARD: EC:1
       MINIO_VOLUMES: /mnt/disk1 /mnt/disk2 /mnt/disk3 /mnt/disk4
-    image: quay.io/minio/minio:RELEASE.2024-12-18T13-15-44Z-cpuv1@sha256:536d08001a739688f1ec9aad169fdd0d59702d1ef91dce529ed1faa56c9f53f5
+    image: quay.io/minio/minio:RELEASE.2025-02-03T21-03-04Z-cpuv1@sha256:247b3ab5a7c817f2b9d4fe6b7261aa71c016da447c14d9e1f8fcfdf1fc9d2480
     labels:
       traefik.enable: true
       traefik.http.routers.minio-dashboard.entrypoints: https
       traefik.http.routers.minio-dashboard.rule: Host(`minio.zarantonello.dev`)
       traefik.http.routers.minio-dashboard.service: minio-dashboard
-      traefik.http.routers.minio.entrypoints: http
-      traefik.http.routers.minio.rule: Host(`s3.zarantonello.dev`)
-      traefik.http.routers.minio.service: minio
       traefik.http.services.minio-dashboard.loadbalancer.server.port: 9001
-      traefik.http.services.minio.loadbalancer.server.port: 9000
     networks:
       - traefik_default
+    ports:
+      - 9000:9000
     read_only: true
     restart: always
     security_opt:
