--- a/kubernetes/blocky/deployments/blocky.yaml
+++ b/kubernetes/blocky/deployments/blocky.yaml
@@ -44,6 +44,7 @@ spec:
               name: blocky
               subPath: blocky.yaml
       enableServiceLinks: false
+      # Keep services bound to one node for now.
       nodeSelector:
         kubernetes.io/hostname: x555sj.srv.zarantonello.dev
       volumes:
