--- a/kubernetes/blocky/configs/blocky.yaml
+++ b/kubernetes/blocky/configs/blocky.yaml
@@ -26,20 +26,19 @@ bootstrapDns:
 caching:
   prefetching: true
 customDNS:
+  # yamllint disable rule:key-ordering
   mapping:
-    grafana.zarantonello.net: 100.106.32.89
+    # websites
+    grafana.zarantonello.net: 100.106.32.89,fd7a:115c:a1e0::f401:f415
+    minio.zarantonello.dev: 100.81.212.20,fd7a:115c:a1e0::7301:d415
+    photos.zarantonello.net: 100.106.32.89,fd7a:115c:a1e0::f401:f415
+    vault.zarantonello.net: 100.106.32.89,fd7a:115c:a1e0::f401:f415
+    # servers
+    x555sj.srv.zarantonello.dev: 100.106.32.89,fd7a:115c:a1e0::f401:f415
     hp2420.srv.zarantonello.dev: 100.81.212.20
-    igl.zarantonello.dev: 100.106.32.89
-    minio.zarantonello.dev: 100.81.212.20
-    photos.zarantonello.net: 100.106.32.89
-    s3.zarantonello.dev: 100.81.212.20
-    vault.zarantonello.net: 100.106.32.89
-    victoriametrics.zarantonello.net: 100.106.32.89
-    x555sj.srv.zarantonello.dev: 100.106.32.89
+  # yamllint enable rule:key-ordering
 fqdnOnly:
   enable: true
-log:
-  format: json
 ports:
   dns: 53
   http: 8080
