--- a/kubernetes/default/kustomization.yaml
+++ b/kubernetes/default/kustomization.yaml
@@ -1,11 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
-configMapGenerator:
-  - files:
-      - configs/blocky.yaml
-    name: blocky
 kind: Kustomization
-namespace: blocky
+namespace: default
 resources:
-  - deployments/blocky.yaml
   - namespace.yaml
   - service-accounts/default.yml
