--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM docker.io/library/alpine:3.21.3@sha256:a8560b36e8b8210634f77d9f7f9efd7ffa463e380b75e2e74aff4511df3ef88c
 
 # hadolint ignore=DL3018
-RUN apk add --no-cache git gpg
+RUN apk add --no-cache git gpg kubectl kustomize sops age
 
 # hadolint ignore=DL3002
 USER 0:0
