--- a/kubernetes/blocky/kustomization.yaml
+++ b/kubernetes/blocky/kustomization.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 configMapGenerator:
   - files:
-      - configs/blocky.yaml
+      - generated/configs/blocky.yaml
     name: blocky
 kind: Kustomization
 namespace: blocky
 resources:
   - deployments/blocky.yaml
   - namespace.yaml
-  - service-accounts/default.yml
+  - service-accounts/default.yaml
