--- a/kubernetes/monitoring/kustomization.yaml
+++ b/kubernetes/monitoring/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 configMapGenerator:
   - files:
-      - configs/alloy.alloy
+      - generated/configs/alloy.alloy
     name: alloy
 kind: Kustomization
 namespace: monitoring
