chore: fix lints

--- a/kubernetes/minio/deployments/minio.yaml
+++ b/kubernetes/minio/deployments/minio.yaml
@@ -55,6 +55,6 @@ spec:
         seccompProfile:
           type: RuntimeDefault
       volumes:
-        - persistentVolumeClaim:
+        - name: minio-data
+          persistentVolumeClaim:
             claimName: minio-data
-          name: minio-data
